[tool.poetry]
name = "strive_python"
version = "0.1.0"
description = ""
authors = ["mrtolkien <gary.mialaret@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psutil = "^5.8.0"
pywin32 = "^301"
ReadWriteMemory = "^0.1.5"
Pymem = "^1.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
